v<0.2.0>, <06/19/2022> -- Updated dsn.py, new cdf calc
v<0.2.0>, <06/21/2022> -- Updated fgd.py, dsn.py fix 
v<0.2.1>, <06/25/2022> -- Documentation and updated docstrings
v<0.2.2>, <06/25/2022> -- Documentation, and general bug fixes with moving all functions into classes
v<0.2.3>, <07/02/2022> -- Updated references, documentation, and version control. General bug fixes
v<0.2.4>, <07/09/2022> -- Added ocsvm thresholder, fixed all tests and examples, updated documentation
v<0.2.5>, <08/04/2022> -- Added clust thresholders, Python 3.10 intergration, CodeCov, and minor changes to thresholders
v<0.2.5>, <09/03/2022> -- Added decomp thresholder, additional description notes in docstrings
v<0.2.6>, <09/08/2022> -- Added majority vote to ALL, depreciated kmeans and shift thresholders
v<0.2.6>, <09/11/2022> -- Add INT metric, fix sort bug for DSN
v<0.2.6>, <09/29/2022> -- Added meta thresholder, updated requirements
v<0.2.6>, <10/01/2022> -- Updated trained meta-models, added confidence threshold attribute
v<0.2.7>, <10/02/2022> -- Removed kmeans and shift thresholders
v<0.2.7>, <10/14/2022> -- Added vae thresholder
v<0.2.7>, <10/15/2022> -- Added mmd loss and autodim to vae
v<0.2.7>, <10/29/2022> -- Added mmd metric to DSN
v<0.2.7>, <11/01/2022> -- Added sgd model to ocsvm
v<0.2.7>, <11/06/2022> -- Exposed random_state variable for required thresholders
v<0.2.7>, <11/07/2022> -- Updated trained meta-models (better thresholding accuracy)
v<0.2.8>, <11/08/2022> -- 'native' parameter to 'auto' (code consistency)
v<0.2.8>, <11/19/2022> -- Stability fixes for vae, ocsvm, fwfm
v<0.2.8>, <11/22/2022> -- Format autopep8, isort
v<0.2.8>, <11/23/2022> -- Refactored 
v<0.2.8>, <11/24/2022> -- Removed unused imports
v<0.2.8>, <12/18/2022> -- Added cpd thresholder
v<0.2.8>, <12/19/2022> -- Updated benchmarking documentation
v<0.2.8>, <12/21/2022> -- Documentation formatting
v<0.2.8>, <12/29/2022> -- Over prediction documentation
v<0.2.8>, <01/02/2023> -- Added GNBC model to meta