@@ -170,6 +170,8 @@ Unsupervised Anomaly Detection <https://arxiv.org/abs/2210.10487>`_
 +-----------+----------------------------------------------------------------+-----------------------------------+
 | ALL       | All Thresholders Combined                                      |                                   |
 +-----------+----------------------------------------------------------------+-----------------------------------+
+| COMB      | Thresholder Combination                                        |                                   |
++-----------+----------------------------------------------------------------+-----------------------------------+
 
 **The comparison among of implemented models** is made available below
 (`Figure
