@@ -1,50 +1,23 @@
-import warnings
-
 import numpy as np
 import scipy.stats as stats
 from sklearn.utils import check_array
 
-from .aucp import AUCP
 from .base import BaseThresholder
-from .boot import BOOT
-from .chau import CHAU
-from .clf import CLF
-from .clust import CLUST
-from .decomp import DECOMP
-from .dsn import DSN
-from .eb import EB
-from .fgd import FGD
-from .filter import FILTER
-from .fwfm import FWFM
-from .gesd import GESD
-from .hist import HIST
-from .iqr import IQR
-from .mad import MAD
-from .mcst import MCST
-from .moll import MOLL
-from .mtt import MTT
-from .ocsvm import OCSVM
-from .qmcd import QMCD
-from .regr import REGR
 from .thresh_utility import cut, normalize
-from .wind import WIND
-from .yj import YJ
-from .zscore import ZSCORE
 
+class COMB(BaseThresholder):
+    """COMB class for Combined thresholder.
 
-class ALL(BaseThresholder):
-    """ALL class for Combined thresholder.
-
-       Use the multiple thresholders as a non-parametric means
+       Use multiple thresholders as a non-parametric means
        to threshold scores generated by the decision_scores where outliers
        are set to any value beyond the (mean, median, or mode) of the
-       contamination from all the combined thresholders.
+       contamination from the selected combination of thresholders.
 
        Parameters
        ----------
 
-       thresholders : list, optional (default='all')
-            List of instantiated thresholders, e.g. [DSN()]
+       thresholders : list, optional (default='default')
+            List of instantiated thresholders, e.g. [DSN(), FILTER()]
 
        max_contam : float, optional (default=0.5)
             Maximum contamination allowed for each threshold output. Thresholded scores
@@ -72,11 +45,7 @@ class ALL(BaseThresholder):
 
     """
 
-    def __init__(self, thresholders='all', max_contam=0.5, method='mean', random_state=1234):
-        
-        warnings.warn('''The ALL thresholder will be depreciated by version 0.3.1.
-                      Use the COMB thresholder instead''', 
-                      category=DeprecationWarning, stacklevel=2)
+    def __init__(self, thresholders='default', max_contam=0.5, method='mean', random_state=1234):
 
         self.thresholders = thresholders
         self.max_contam = max_contam
@@ -107,17 +76,13 @@ class ALL(BaseThresholder):
         decision = np.sort(normalize(decision))
 
         # Initialize thresholders
-        if self.thresholders == 'all':
-            self.thresholders = [IQR(), MAD(), FWFM(), YJ(), ZSCORE(), AUCP(), QMCD(),
-                                 FGD(), DSN(random_state=self.random_state), CLF(),
-                                 FILTER(), WIND(random_state=self.random_state), EB(),
-                                 REGR(random_state=self.random_state),
-                                 BOOT(random_state=self.random_state),
-                                 MCST(random_state=self.random_state), HIST(),
-                                 MOLL(), CHAU(), GESD(), MTT(),
-                                 OCSVM(random_state=self.random_state),
-                                 CLUST(random_state=self.random_state),
-                                 DECOMP(random_state=self.random_state)]
+        if self.thresholders == 'default':
+            from .dsn import DSN
+            from .filter import FILTER
+            from .ocsvm import OCSVM
+
+            self.thresholders = [DSN(random_state=self.random_state), FILTER(),
+                                 OCSVM(random_state=self.random_state)]
 
         # Apply each thresholder
         contam = []
